--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
 			<version>3.14.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-authorization-server</artifactId>
+		</dependency>
 
 
 	</dependencies>
